# BestGLGame

./: .gitignore  CMakeLists.txt
Include/GameLayer/: Camera.h  Chunk2D.h  ChunkManager2D.h  FirstGameLayer.h  GameLayer.h  TileRenderer.h  TilesContainer.h
Include/Platform/: AABB.h  App.h  Assertion.h  Event.h  InputManager.h  Inputs.h  Model.h  Program.h  Rect.h  Renderable.h  Renderer.h  ResourceManager.h  Shader.h  Sprite.h  SpriteRenderer.h  Utils.h  Window.h
Include/Platform/Event/: ReadOnlyEvent.h
Include/Platform/Window/: BaseWindow.h  GLFWWindow.h  IImGuiWindow.h
Resources/Configs/: Config.conf
Resources/Shaders/: fragment.glsl
Src/GameLayer/: Camera.cpp  Chunk2D.cpp  ChunkManager2D.cpp  FirstGameLayer.cpp  GameLayer.cpp  TileContainer.cpp  TileRenderer.cpp
Src/Platform/: App.cpp  InputManager.cpp  Model.cpp  Program.cpp  Renderable.cpp  Renderer.cpp  Shader.cpp  Sprite.cpp  SpriteRenderer.cpp  Window.cpp  main.cpp
Src/Platform/Inputs/: Inputs.cpp
Src/Platform/Window/: GLFWWindow.cpp
